apps/gakhalmo-front/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gakhalmo-front
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.10.0/24,10.0.100.0/24"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev.gakhalmo.klr.kr
      secretName: dev-gakhalmo-klr-kr-tls
  rules:
    - host: dev.gakhalmo.klr.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gakhalmo-front
                port:
                  number: 3000
